View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032782 | Open CASCADE | OCCT:Visualization | public | 2022-01-18 13:46 | 2022-01-18 13:46 |
Reporter | kgv | Assigned To | CheskoArt | ||
Priority | normal | Severity | minor | ||
Status | assigned | Resolution | open | ||
Product Version | 7.6.0 | ||||
Target Version | 7.7.0 | ||||
Summary | 0032782: Visualization, TKD3DHost - improve robustness of test case opengl/drivers/d3dhost | ||||
Description | Test case opengl/drivers/d3dhost fails on Jenkins:pload MODELING VISUALIZATION vdriver -load D3DHOST pload D3DHOST vclear vinit View1 TKOpenGl | Type: Error | ID: 0 | Severity: High | Message: Direct3D9, Present device failed, Error #141953144) but works fine locally. It is desired providing some solution to this problem. | ||||
Steps To Reproduce | opengl drivers d3dhost | ||||
Tags | No tags attached. | ||||
Test case number | opengl drivers d3dhost | ||||
Date Modified | Username | Field | Change |
---|---|---|---|
2022-01-18 13:46 | kgv | New Issue | |
2022-01-18 13:46 | kgv | Assigned To | => kgv |
2022-01-18 13:46 | kgv | Assigned To | kgv => CheskoArt |
2022-01-18 13:46 | kgv | Status | new => assigned |
2022-01-18 13:46 | kgv | Test case number | => opengl drivers d3dhost |
2022-01-18 13:46 | kgv | Relationship added | child of 0032208 |