0032782: Visualization, TKD3DHost - improve robustness of test case opengl/drivers/d3dhost