src/D3DHost/D3DHost_View.cxx
@@ -371,7 +371,7 @@ bool D3DHost_View::d3dSwap()
   }
 
   const HRESULT isOK = myD3dDevice->Present (NULL, NULL, NULL, NULL);
-  if (isOK != D3D_OK)
+  if (isOK != D3D_OK && isOK != S_PRESENT_OCCLUDED)
   {
     myWorkspace->GetGlContext()->PushMessage (GL_DEBUG_SOURCE_APPLICATION, GL_DEBUG_TYPE_ERROR, 0, GL_DEBUG_SEVERITY_HIGH,
                                               TCollection_AsciiString("Direct3D9, Present device failed, ") + d3dFormatError (isOK));
